# p2pvpn

./: Cargo.toml
contract/: .binpath  Cargo.toml  README.md  build.rs
contract/app/: Cargo.toml
contract/app/src/: lib.rs
contract/client/: Cargo.toml  build.rs  p_2_pvpn_contract_client.idl
contract/client/src/: lib.rs  p_2_pvpn_contract_client.rs
contract/src/: lib.rs
contract/tests/: gtest.rs
src/: contract.rs  main.rs  tui.rs  vpn.rs
