[package]
name = "p2pvpn-contract"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Package allowing to build WASM binary for the program and IDL file for it"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p2pvpn-contract-app.workspace = true
sails-rs.workspace = true

[dev-dependencies]
p2pvpn-contract-app.workspace = true
p2pvpn-contract-client.workspace = true
sails-rs = { workspace = true, features = ["gtest", "gclient"] }
tokio = { workspace = true, features = ["rt", "macros"] }

[build-dependencies]
p2pvpn-contract-app.workspace = true
sails-rs = { workspace = true, features = ["build"] }
